Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-31737

Node never returns from Donor/Desynced to Synced when wsrep_mode = BF_ABORT_MARIABACKUP

    XMLWordPrintable

Details

    Description

      Note: I reported this in a comment on MDEV-26391, but as instructed, I'm opening a bug.

      I tried out the new wsrep_mode = BF_ABORT_MARIABACKUP setting and found that, when using wsrep_sst_method = mariabackup, a node never returns from Donor/Desynced to Synced after a serving as an SST donor.

      I've attached a tarball containing a docker-compose environment that reliably reproduces the issue. The logs directory contains the logs from each node and queries that show the 'wsrep_%' status and PROCESSLIST.

      After the cluster is formed, 2 of the 3 nodes have

      +---------------------------+----------------+
      | Variable_name             | Value          |
      +---------------------------+----------------+
      | wsrep_local_state_comment | Donor/Desynced |
      +---------------------------+----------------+
      

      while the last node to join the cluster has

      +---------------------------+--------+
      | Variable_name             | Value  |
      +---------------------------+--------+
      | wsrep_local_state_comment | Synced |
      +---------------------------+--------+
      

      Attachments

        Activity

          People

            sysprg Julius Goryavsky (Inactive)
            ehontz Eric Hontz
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.